Fix sample example - update compaction configuration (#99)
* Update compaction config

* Add resources to try block. Use commom method to create table